# 32-2-movie-data-analysis

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp  movie.h
